--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-*/__pycache__/
-*/logs/
+__pycache__/
+logs/
 .venv/
 */mp*.pdf
 */mp*.tex
@@ -7,3 +7,4 @@
 autocorrelation/data/satellite.wav
 autocorrelation/data/satellite2.wav
 autocorrelation/data/output.wav
+*:Zone.Identifier
